Akeeba Data Compliance 3.2.2
================================================================================
# [HIGH] The ATS integration plugin failed with ATS 5

Akeeba Data Compliance 3.2.1
================================================================================
# [LOW] Possible PHP error when updating this along other extensions using the same post-installation script

Akeeba Data Compliance 3.2.0
================================================================================
+ Notice about Joomla 4 End of Service
~ Joomla 5 preparation: Use DatabaseInterface instead of DatabaseDriver
~ Joomla 5 preparation: Remove obsolete class names
~ Joomla 5 preparation: Work around backwards incompatible changes in core plugin events
~ Joomla 5 preparation: Normalise plugin event calling
~ Joomla 5 preparation: Plugin event handlers clean-up
~ Block uninstallation of child extensions
~ Changed the plugins' namespace
# [LOW] opcache_invalidate may not invalidate a file

Akeeba Data Compliance 3.1.1
================================================================================
~ Changed the fake email domain used when pseudonymising users
# [HIGH] Joomla 4.2 made it extra hard to restart the session (gh-40)
# [HIGH] The Profile Deletions page threw an exception (gh-39)
# [MEDIUM] Plugins not enabled on clean installation
# [LOW] User plugin may not work on some installations which pass form data as an array (gh-42)

Akeeba Data Compliance 3.1.0
================================================================================
# [LOW] Wrong grammatical case (nominative instead of genitive) in months in some languages e.g. Greek

Akeeba Data Compliance 3.1.0
================================================================================
+ Minimum Joomla 4.2, PHP 7.4
- Removed PHP version warnings

Akeeba Data Compliance 3.0.5
================================================================================