@@ -55,7 +55,13 @@ $link = $showLink
 	? str_replace(['[USER_ID]', '[USERNAME]', '[NAME]', '[EMAIL]'], [$user_id, $username, $name, $email], $link)
 	: '';
 
-$gravatarUrl = sprintf('https://www.gravatar.com/avatar/%s?s=%s', md5(strtolower(trim($email))), $gravatarSize);
+$gravatarUrl = sprintf(
+	'https://www.gravatar.com/avatar/%s?s=%s',
+	function_exists('hash') && function_exists('hash_algos') && in_array('sha256', hash_algos())
+		? hash('sha256', strtolower(trim($email)))
+		: md5(strtolower(trim($email))),
+	$gravatarSize
+);
 
 $email = str_replace(['@', '.'],['<wbr>@', '<wbr>.'], $email);
 
