@@ -1,5 +1,6 @@
 Akeeba Data Compliance 3.2.2
 ================================================================================
+~ Update Gravatar URLs with SHA-256
 # [HIGH] The ATS integration plugin failed with ATS 5
 
 Akeeba Data Compliance 3.2.1
